WC  = WooCommerce (WordPress) (alle ondersteunde versies, vanaf 5.5.2 is dat alleen nog WC3)
WC2 = WooCommerce 2 (WordPress)
WC3 = WooCommerce 3 (WordPress)

5.5.2 (2019-01-??)
------------------
Features:
- WC: Added support for the 'Custom Order Numbers for WooCommerce' plugin.
- ALL: Verander de factuur in een concept als een regel een onbekend btw
  percentage bevat.

Bugs:
- ALL: For refunds, the "property source" 'order' referred to an Invoice\Source
  object instead of to the hosting webshops's order object/array. The property
  source 'orderSource' now no longer exists in WC.
  NOTE: This may have consequences for your field references (veldverwijzingen)
  in your advanced settings!
- ALL: Setting Concept not used: plugin would make an invoice a concept on
  warnings regardless the value for this setting.

Refactorings:
- OC: Cache geo zones.
- WC: Use add_meta_boxes_{post_type} instead of add_meta_boxes action.
- ALL: Make field references handling more robust (though catchable fatal errors
  are still not caught).

5.5.1 (2018-12-13)
------------------
Features:
- ALL: Make better use of available vat class meta data to reduce the possible
  vat types of a line.
- ALL: Make better use of available meta data (by combining them) to get the vat
  rate of a line.
- WC3: WC seems to return amounts with an increased precision (was: rounded to
  the cent. now: it seems not any longer rounded).
- WC3: Follow setting 'woocommerce_tax_based_on' to determine the country code.
- WC: Use country, city and postal code of Acumulus invoice (instead of Customer
  object) to get lookup tax rates. (this also makes
  WooCommerce\Creator::getVatRateLookupMetadataByTaxClass() work in WC2...)

Bugs:
- ALL: only use the setting that defines EU vat classes when the shop might sell
  articles subject to EU vat.
- ALL: looked up vat rate meta data may be an empty array: use empty() instead
  of isset().